# yakutmorph

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/: 1_alfabet_definition.fst  2_stem_definition.fst  3_derivational_affixes.fst  4_inflectional_affixes.fst  5_morphotactics.fst  6_phonotactics.fst  README.md  lexicon.lex  yma.fst  yms.fst  ymv.fst
src/affixes/: derivational.fst  inflectional.fst
src/alphabet/: consonants.fst  vowels.fst
src/lexicons/: all_last_syllables.lex  last_syllables.lex  lexical_roots.lex  prev_syllables.lex  primary_endings.lex
src/rules/: affix_transformations.fst  consonant_clusters.fst  general_root_transformations.fst  post_transformations.fst  progressive_assimilation.fst  regressive_assimilation.fst  regular_vowel_harmony.fst  special_insertions.fst  special_vowel_harmony.fst  specific_root_transformations.fst
src/stems/: derived.fst  primary.fst  syllable_boundaries.fst
tests/: test_tokenizers.py  test_transducers.py
yakutmorph/: disambiguation.py  interfaces.py  main.py  mappers.py  requirements.txt  tokenizers.py  transducers.py  utils.py  wrappers.py
yakutmorph/data/: gru_weights.pth  mappings.pkl  mappings.yaml  morph_reference.yaml  vocabulary.pkl
