[metadata]
name = yakutmorph
version = 0.0.5
author = Nicolas Cortegoso-Vissio
author_email = nicolascortegoso@hotmail.com
description = A morphological analyzer for the Yakut (Sakha) language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicolascortegoso/yakutmorph
classifiers =
    Intended Audience :: NLP practitioners
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True


[options.package_data]
fsts = *.a
data = *